# endpoint.py
@@ -5,42 +5,49 @@ from models import Endpoint, Training
 
 def getAllEndpoint():
 
-    endpoints = Endpoint.query.order_by(Endpoint.endpoint_name).all()
+    endpoints = Endpoint.query.order_by(Endpoint.name).all()
     return jsonify(endpoints=[endpoint.serialize() for endpoint in endpoints]) 
 
 
 def newEndpoint(endpoint):
 
-    training = Training.query.filter(Training.training_id == endpoint.get("training_id")).one_or_none()
+    training = Training.query.filter(Training.id == endpoint.get("training_id")).one_or_none()
     
     if training is not None:
-        newEndpoint =  Endpoint(endpoint_id = endpoint.get("endpoint_id"), endpoint_name = endpoint.get("endpoint_name"))
 
-        training.endpoints.append(newEndpoint)
-        db.session.add(newEndpoint)
-        db.session.commit()
+        if Endpoint.query.filter(Endpoint.name == endpoint.get("name")) is not None:
 
-        return jsonify(newEndpoint.serialize()), 201
+            newEndpoint =  Endpoint(id = endpoint.get("id"), name = endpoint.get("name"))
+
+            training.endpoints.append(newEndpoint)
+            db.session.add(newEndpoint)
+            db.session.commit()
+
+            return jsonify(newEndpoint.serialize()), 201
+
+        else:
+            abort(409,"Endpoint {name} exists already".format(name= endpoint.get("name")),)
     else:
-        abort(409,"Endpoint {endpoint_name} exists already".format(endpoint_name=endpoint_name),)
+        abort(409,"Training with this id:{training_id} not exists".format(training_id= id))
+        
 
 
     
 
-def getEndpointById(endpoint_id):
+def getEndpointById(id):
 
-    endpoint =  Endpoint.query.join(Training, Training.training_id == Endpoint.training_id).filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
+    endpoint =  Endpoint.query.join(Training, Training.id == Endpoint.training_id).filter(Endpoint.id == id).one_or_none()
 
     if endpoint is not None:
         return jsonify(endpoint.serialize())
     else:
-        abort(404, "Endpoint not found for Id: {endpoint_id}".format(endpoint_id=endpoint_id),)
+        abort(404, "Endpoint not found for Id: {id}".format(id=id),)
 
 
-def updateEndpoint(endpoint_id, endpoint):
+def updateEndpoint(id, endpoint):
 
     
-    update_endpoint = Endpoint.query.filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
+    update_endpoint = Endpoint.query.filter(Endpoint.id == id).one_or_none()
 
     if update_endpoint is not None:
 
@@ -51,24 +58,24 @@ def updateEndpoint(endpoint_id, endpoint):
         return jsonify(update_endpoint.serialize()), 200
 
     else:
-        abort(404, "Endpoint not found for Id: {endpoint_id}".format(endpoint_id = endpoint_id))
+        abort(404, "Endpoint not found for Id: {id}".format(id = id))
 
 
-def deleteEndpoint(endpoint_id):
+def deleteEndpoint(id):
 
-    endpoint = Endpoint.query.filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
+    endpoint = Endpoint.query.filter(Endpoint.id == id).one_or_none()
 
     if endpoint is not None:
         db.session.delete(endpoint)
         db.session.commit()
 
         return make_response(
-            "{endpoint_id} successfully deleted".format(endpoint_id=endpoint_id), 200
+            "Endpoint with id:{id} successfully deleted".format(id= id), 200
         )
 
     else:
         abort(
-            404, "Endpoint with this id: {endpoint_id} not found".format(endpoint_id=endpoint_id)
+            404, "Endpoint with this id: {id} not found".format(id= id)
         )
 
 
